# More-Tech-Hackathon

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: docker.yml  health-check.yml  linters.yml
backend/: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/v1/: analys.py  analysis.py  health.py  router.py
backend/src/core/: pool.py  settings.py
backend/src/core/ai/: client.py  settings.py  summary.py
backend/src/core/ai/templates/: summary.jinja2
backend/src/core/analysis/: __init__.py  analyzer.py  context.py
backend/src/core/analysis/rules/: __init__.py  analyze_with_rules.py
backend/src/core/analysis/rules/ast/: autovacuum_tuning.py  cost_estimation.py  database_tuning.py  defragmentation_analysis.py  hard_joins.py  index_optimization.py  inefficient_data_types.py  inefficient_group_by.py  inefficient_join.py  inefficient_limit.py  inefficient_order_by.py  inefficient_subquery.py  missing_index.py  missing_where_clause.py  n_plus_one.py  n_plus_one_detection.py  n_plus_one_query.py  partitioning_analysis.py  query_rewriting.py  rule_test.py  select_star.py  table_structure_optimization.py  vacuum_analyze_needed.py
backend/src/core/analysis/rules/custom/: many_rows.py  seq_scan_rule.py
backend/src/core/models/: __init__.py  analysis_result.py  lint_diagnose.py  lint_request.py  lint_result.py  recommendation.py
backend/src/utils/: logger.py
