[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "psycopg>=3.2.9",
    "psycopg-pool>=3.2.6",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "isort>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8.6",
    "ruff>=0.12.12",
    "ty>=0.0.1a20",
    "typos>=1.36.2",
]
