[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "psycopg-pool>=1.2",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8.6",
    "ruff>=0.12.12",
    "ty>=0.0.1a20",
    "typos>=1.36.2",
    "isort>=6.0.1",
]
